# vcpkg-gnustep-renovate

./: LICENSE  README.md  renovate.json  vcpkg-configuration.json  version.json
.github/workflows/: ci.yaml  renovate.yaml
ports/cairo/: 0001-Add-check-for-clang-to-cairo-attribute-handling-code.patch  portfile.cmake
ports/gnustep/: GNUstepConfig.cmake  portfile.cmake  vcpkg.json
ports/gnustep-back/: 0001-Define-WINBOOL-on-non-MinGW-platforms.patch  0001-Don-t-link-with-libm-on-Windows.patch  0001-Windows-compatibility.patch  portfile.cmake  vcpkg.json
ports/gnustep-base/: 0001-Support-libcurl-7.61.patch  portfile.cmake  vcpkg.json
ports/gnustep-gui/: 0001-Add-APPKIT_EXPORT_CLASS-statements.patch  0001-Disable-building-Tools.patch  0001-GSMemoryPanel-Only-call-GSDebug-in-debug-mode.patch  0001-Mark-PACKAGE_SCOPE-as-public-on-Windows.patch  0001-Only-include-unistd.h-if-it-exists.patch  portfile.cmake  vcpkg.json
ports/gnustep-headless/: portfile.cmake  vcpkg.json
ports/gnustep-make/: portfile.cmake  vcpkg.json
ports/gnustep-winuxtheme/: configure  portfile.cmake  vcpkg.json
ports/libdispatch/: 0001-Fix-Windows-compatibility.patch  0001-Use-CMAKE_C_COMPILER_FRONTEND_VARIANT-to-detect-msvc.patch  0001-Use-external-BlocksRuntime.patch  portfile.cmake  vcpkg.json
ports/libffi/: portfile.cmake
ports/libobjc2/: portfile.cmake  vcpkg.json
ports/libxml2/: vcpkg.json  (+1 more)
triplets/: x64-linux-llvm.cmake  x64-windows-llvm.cmake
tutorial/: CMakeLists.txt  CMakePresets.json
tutorial/Modules/: FindGNUstep.cmake  FindGNUstep.darwin.cmake  FindGNUstep.vcpkg.cmake
(+10 files in other folders)
